# RD_FileGameEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.txt
.claude/: settings.local.json
CMAKE/: SOURCES.cmake  TESTS.cmake
DATA/GAME_STATE/: Default_Game_State.json
DATA/GUI/: gui_layout.json
ESP32/: ESP32FileOperator.h  ESP32GraphicsRenderer.cpp  ESP32GraphicsRenderer.h
ESP32/KSC/: KSC_Sources.cpp
RAYLIB/: RaylibFileOperator.h  RaylibGraphicsRenderer.cpp  RaylibGraphicsRenderer.h  main.cpp
SCRIPTS/: build_raylib.py  build_tests.py  refresh_game_data.py  resize_png.py  run_game.py  run_raylib.py  sync_to_sd.bat  sync_to_sd.py  sync_with_desktop.py  view_data_layout.py
SHARED/BAR/: ControlBarSection.cpp  ControlBarSection.h
SHARED/FILE_OPERATOR/: FileOperator.h
SHARED/GAME_RUNNER/: GameRunner.cpp  GameRunner.h
SHARED/GAME_STATE/: GameStateComparison.cpp  GameStateComparison.h
SHARED/GRAPHICS_RENDERER/: GraphicsRenderer.h
SHARED/SCENE/: Scene.cpp  Scene.h  SceneFactory.h
SOURCE/ESP32/: ESP32FileOperator.h  ESP32GraphicsRenderer.cpp  ESP32GraphicsRenderer.h
SOURCE/RAYLIB/: GameFolderBrowser.cpp  GameFolderBrowser.h  GamePickerScreen.h  RaylibFileOperator.h  RaylibGameLibrary.h  RaylibGraphicsRenderer.cpp  RaylibGraphicsRenderer.h  SaveFileBrowser.cpp  SaveFileBrowser.h  main.cpp
TESTS/: test_ActiveAssetSection.cpp  test_ActiveSceneSection.cpp  test_GUISection.cpp  test_GameRunner.cpp  test_GameStartManager.cpp  test_GameStateComparison.cpp  test_Scene.cpp  test_Zone.cpp
TESTS/UTIL/: NullGraphicsRenderer.h  TestFileOperator.h
(+55 files in other folders)
